# ginstall

./: CMakeLists.txt  README  README.md  build.sh  main.c  variables.h
gui/: basepkg.c  install.c  network.c  partition.c  sidebar.c  splash.c  user.c  window.c
